src/ui/snapshots/starfold__ui__frames__structured-archive-100x30.snap
---
source: src/ui/frames.rs
expression: "render(&mut app,w,h)"
---
╔═ S T A R / F O L D ══════════════════════════════════════════════════════════════════════ stack ═╗
║                                         ‹  hidden  sort  filter  Bookmark  places  view  actions ║
║─ ~ ── 3 files · 3 dirs · 290 B ──────────────────────────────────────────────────────────────────║
║    ▸ empty/                                                       dir             -  Sep 10      ║
║    ▸ pictures/                                                    dir             -  Sep 10      ║
║    ▸ projects/                                                    dir             -  Sep 10      ║
║›   ◇ blob.bin                                                     bin         256 B  Sep 10      ║
║    ↗ dangling                                                     link          7 B  Sep 10      ║
║    ↗ notes.txt                                                    link         27 B  Sep 10      ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ PREVIEW — ◇ blob.bin ═══════════════════════════════════════════════════════════════════════════╗
║                                                                                            close ║
║                                                                                          Archive ║
║ ≡ notes/readme.txt  128 B                                                                        ║
║ ♪ music/song.flac  12.0 MB                                                                       ║
║                                                                                                  ║
║                                                                                                  ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ OPERATIONS ═════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                           remove ║
║                                          nothing queued                                          ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
? help  / filter  space mark  enter open  y yank  p paste  m move  dd delete                  ~  off
