src/ui/snapshots/starfold__ui__frames__tabs-latte-60x21-picker.snap
---
source: src/ui/frames.rs
expression: picker
---
   7 ~               ×     8 ~               ×  ‹ ›  +
╔═ S T A R / F O L D ══════════════════════════════ stack ═╗
║ ‹  hidden  sort  filter  Bookmark  places  view  actions ║
╔═ TABS ═══════════════════════════════════════════════════╗
║~   ~                                                     ║
║~   ~                                                     ║
║~   ~                                                     ║
║~   ~                                                     ║
║~   ~                                                     ║
║~   ~                                                     ║
║~   ~                                                     ║
║~   ~                                                     ║
║                                                          ║
║                                                          ║
║                                                          ║
║                                                          ║
╚════════════════════ enter switch · → actions · esc close ╝
║                                                   remove ║
║                      nothing queued                      ║
╚══════════════════════════════════════════════════════════╝
? help  / filter  space mark  enter open  y yank  p   ~  off
