src/ui/snapshots/starfold__ui__frames__tabs-latte-60x21.snap
---
source: src/ui/frames.rs
expression: frame
---
   7 ~               ×     8 ~               ×  ‹ ›  +
╔═ S T A R / F O L D ══════════════════════════════ stack ═╗
║ ‹  hidden  sort  filter  Bookmark  places  view  actions ║
║─ ~ ── 3 files · 3 dirs · 290 B ──────────────────────────║
║›   ▸ empty/                               -  Sep 10      ║
║    ▸ pictures/                            -  Sep 10      ║
║    ▸ projects/                            -  Sep 10      ║
║    ◇ blob.bin                         256 B  Sep 10      ║
║    ↗ dangling                           7 B  Sep 10      ║
║    ↗ notes.txt                         27 B  Sep 10      ║
║                                                          ║
╚═■■■■■■■■■■■■ 125.0 GB free / 500.0 GB total══════════════╝
╔═ PREVIEW — ▸ empty ══════════════════════════════════════╗
║                                                    close ║
║ Empty directory                                          ║
╚══════════════════════════════════════════════════════════╝
╔═ OPERATIONS ═════════════════════════════════════════════╗
║                                                   remove ║
║                      nothing queued                      ║
╚══════════════════════════════════════════════════════════╝
? help  / filter  space mark  enter open  y yank  p   ~  off
